--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/agdavid/algolia-backend-instantsearch-js-demo/issues"
   },
-  "homepage": "https://github.com/agdavid/algolia-backend-instantsearch-js-demo#readme"
+  "homepage": "https://github.com/agdavid/algolia-backend-instantsearch-js-demo#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "path": "^0.12.7"
+  }
 }
