--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv-extended": "^2.9.0",
     "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.1",
+    "hbs": "^4.1.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
