--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/agdavid/algolia-backend-instantsearch-js-demo#readme",
   "dependencies": {
+    "algoliasearch": "^4.9.1",
     "body-parser": "^1.19.0",
     "dotenv-extended": "^2.9.0",
     "dotenv-parse-variables": "^2.0.0",
